# OJCLIENT

./: CMakeLists.txt  README.md  daemon_app.cpp  judge_app.cpp
Common/: Exceptions.cpp  Exceptions.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h
Core/: Daemon.cpp  Daemon.h  Judge.cpp  Judge.h  SafeSysCall.h
Rest/: Client.cpp  Client.h  HustojClient.cpp  HustojClient.h  Rest.cpp  Rest.h
Test/: test_rest.cpp
doc/: judge.conf.example
doc/configuration/: judge.conf.example
doc/testexam/: README.md
doc/testexam/01/: Answer01.md  Attack01.md  Others01.md  Problem01.md
doc/testexam/02/: Answer02.md  Others02.md  Problem02.md
